# swinglab

./: .gitignore  Dockerfile  README.md  fly.toml  package.json  pnpm-lock.yaml  vercel.json
app/: layout.tsx  page.tsx
app/components/: FilterControls.tsx  InstrumentCard.tsx
engine/: Cargo.toml
engine/.cargo/: config.toml
engine/src/: filter.rs  lib.rs  reverb.rs
