[package]
name = "swinglab-engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Performance"
] }
once_cell = "1.19"
rustfft = "6.3.0"

[profile.release]
opt-level = 3
lto = true
